--- a/my-site/index.html
+++ b/my-site/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+h1 {color: rgb(16, 9, 80)}
+h3 {background-color:cyan}
+h2 {text-decoration: underline}
+h3 {text-align: center}
+h4 {margin-left: 7cm}
+h1, h2, h3, h4, h5 {font-family: fantasy}
+  </style>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title><my-site></my-site></title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' href='selectores.css'>
     <script src='main.js'></script>
 </head>
-<body>
-    <h1>Ejemplo</h1>
-    <h1>Hola mundo </h1>
+<body style="background-color:lightslategray">
+    <h1 style="background-color:crimson">Ejemplo</h1>
+    <h1 style="background-color:#6da37c">Hola mundo </h1>
   <h2>etiqueta 2 </h2>
   <h3>etiqueta 3 </h3>
   <h4>etiqueta 4 </h4>
