Cambio por pag de actividad

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5 {font-family: fantasy}
   <audio src="file:///C:/Users/alexa/Downloads/黒魔%20-%20sink%20to%20the%20deep%20sea%20world.mp3" type="audio/mp3" controls></audio>
 <p></p>
 
-<img src="file:///C:/Users/alexa/Downloads/manzana.jpg">
+<img src="file:///C:/Users/alexa/Downloads/manzana.jpg" width="30" height="30">
 <p></p>
 <a href="https://www.youtube.com/watch?v=TKfS5zVfGBc">Enlace</a>
 </body>
